# whisper-peft-training-scripts

./: .gitignore  README.md  evaluate_checkpoint.py  pyproject.toml  run_evaluate.py  run_evaluate_peft.py  run_peft.py  test-convert.py
convert/: convert_to_ctranslate2.py  merge_peft_model.py
evaluation/: dutch_normalizer.py  evaluation.py
train/: data_collator.py  load_datasets.py  prepare_dataset.py
