[project]
name = "peft-training-new"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.1.0",
    "evaluate>=0.4.3",
    "jiwer>=3.0.5",
    "librosa>=0.10.2.post1",
    "llvmlite>=0.43.0",
    "numba==0.60.0",
    "numpy>=2.0.0",
    "peft>=0.13.2",
    "torch>=2.5.1",
    "tqdm>=4.67.0",
    "transformers>=4.46.2",
]
